--- a/package.json
+++ b/package.json
@@ -23,11 +23,18 @@
     "react-native-screens": "^2.11.0",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
-    "react-native-youtube": "^2.0.1"
+    "react-native-youtube": "^2.0.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-preset-expo": "~8.1.0",
+    "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3"
   },
   "private": true
 }
